# xlinject

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: ARCHITECTURE.md  INDEX.md  PUBLISHING.md  ROADMAP.md  USAGE.md
scripts/: check_plain_text_style.py
src/xlinject/: __init__.py  cellrefs.py  cli.py  cli_write_cells.py  highlevel.py  injector.py  workbook_map.py
tests/: test_cellrefs.py  test_injector.py
