[project]
name = "xlinject"
version = "0.1.0"
description = "A surgical XML injector for .xlsx files. Reads and writes specific cell values directly into the archive without altering formatting, metadata, or breaking modern dynamic array formulas."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "xlinject contributors" }
]
license = { file = "LICENSE" }
keywords = [
  "python",
  "xlsx",
  "xml-parsing",
  "excel",
  "data-engineering",
  "openpyxl-alternative"
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Office/Business :: Financial :: Spreadsheet"
]
dependencies = []

[project.scripts]
xlinject-replace = "xlinject.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.11",
  "openpyxl>=3.1"
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/xlinject"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
